start-microfrontends/k8s/dev/profepa-microfront/profepa-microfront-deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modulefederation-profepa-microfront-deployment-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modulefederation-profepa-microfront-dev
  template:
    metadata:
      labels:
        app: modulefederation-profepa-microfront-dev
    spec:
      containers:
      - name: front-vucem30-container-dev
        image: ghcr.io/vucem30/dockerized-modulefederation-profepa-microfront:1.2.69
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
      imagePullSecrets:
      - name: vucem30registrykey
