start-microfrontends/k8s/dev/profepa-microfront/profepa-microfront-service-dev.yaml
# Expose the deployment using a Service
apiVersion: v1
kind: Service
metadata:
  name: modulefederation-profepa-microfront-service-dev
spec:
  selector:
    app: modulefederation-profepa-microfront-dev
  ports:
    - protocol: TCP
      port: 4220
      targetPort: 80
  type: NodePort
